<resources>
    <string name="nazev_aplikace">πčkulačka</string>

    <string name="menu_vzdalenost">Vzdálenost</string>
    <string name="menu_plocha">Plocha</string>
    <string name="menu_cas">Čas</string>
    <string name="menu_objem">Objem</string>
    <string name="menu_prd">Prdy</string>

    <string name="zadej_vzdalenost">Vzdálenost</string>
    <string name="palce">Počet palců</string>
    <string name="penisy">Počet penisů</string>
    <string name="schody">Počet schodů</string>
    <string name="sloni">Počet slonů</string>
    <string name="fabie">Počet Fabií</string>
    <string name="dan">Jednotek DAN</string>
    <string name="stadiony">Počet fotbalových hřišť</string>
    <string name="glompy">Počet glompů</string>
    <string name="kolem_sveta">Počet objetých zeměkoulí</string>
    <string name="geldolfy">Počet geldolfů</string>

    <string name="zadej_plochu">Plocha</string>
    <string name="vaclavaky">Počet Václaváků</string>
    <string name="bzilion">Už je to bžilion?</string>

    <string name="cas">Čas</string>
    <string name="doba">Počet dob</string>
    <string name="koeficient_zpozdeni">Zadej koeficient zpoždění</string>
    <string name="dneska">Počet dnesků</string>
    <string name="pozdejc">Počet pozdějců</string>
    <string name="pivko">Kolik stihneš dát pivek</string>
    <string name="mnult">Počet mnultů</string>
    <string name="uzjdu">Počet užjdů</string>

    <string name="zadej_objem">Objem</string>
    <string name="brazilsky_pytel">Počet brazilských pytlů</string>
    <string name="uruguaysky_pytel">Počet uruguayských pytlů</string>
    <string name="nadrz_fabie">Počet nádrží Fabie</string>

    <string name="prduchovo_cislo">Prduchovo číslo</string>
    <string name="nazev_prduch">Název: </string>
    <string name="projevy_prduch">Fyzikální projevy: </string>
    <string name="prd_zvuk">Akustická intenzita prdu</string>
    <string name="prd_zvuk_nadpis">Intenzita: </string>
    <string name="prd_zvuk_nazev">Název prdu: </string>

    <string name="je_to_bzilion">Todlecto ještě neni bžilion velký, kemo…</string>
    <string name="neni_to_bzilion">Todle je fakt bžilion velký…</string>
</resources>