<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center_horizontal"
        android:padding="@dimen/okraje"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/prduchovo_cislo"
            android:textSize="@dimen/nadpis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPrduch"/>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:max="17"
            android:progress="8"
            android:id="@+id/seekBarPrduchovoCislo"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/projevy_prduch"
                    android:layout_marginEnd="@dimen/okraje"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewFyzikalniProjevy"/>
            <TextView
                    android:text=""
                    android:layout_width="0sp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewPrduchProjevy"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/nazev_prduch"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewNazev"/>
            <TextView
                    android:text=""
                    android:layout_weight="5"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewPrduchNazev"/>
        </TableRow>
    </TableLayout>
    <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?attr/colorPrimaryVariant"
    />
    <TextView
            android:textSize="@dimen/nadpis"
            android:text="@string/prd_zvuk"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPrdZvuk"/>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:id="@+id/seekBarPrdZvuk"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/prd_zvuk_nadpis"
                    android:layout_marginEnd="@dimen/okraje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewPrdHlasitost"/>
            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewPrdDecibely"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/prd_zvuk_nazev"
                    android:layout_marginEnd="@dimen/okraje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textPrdNazev"/>
            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewPrdZvukNazev"/>
        </TableRow>
    </TableLayout>

</LinearLayout>