<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/okraje"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:text="@string/zadej_vzdalenost"
            android:textSize="@dimen/velikost_textu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/editTextVzdalenost"
            app:layout_constraintBottom_toBottomOf="@id/editTextVzdalenost"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textViewZadejVzdalenost"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/okraje"
            app:layout_constraintStart_toEndOf="@id/textViewZadejVzdalenost"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spinnerJendotkyVzdalenost"
            android:inputType="number|numberDecimal"
            android:ems="20"
            android:id="@+id/editTextVzdalenost"
            android:minHeight="48sp"
            android:importantForAutofill="no"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/editTextVzdalenost"
            app:layout_constraintBottom_toBottomOf="@id/editTextVzdalenost"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/spinnerJendotkyVzdalenost"
            android:minHeight="48sp"/>
    <View
            android:id="@+id/divider"
            app:layout_constraintTop_toBottomOf="@id/editTextVzdalenost"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black"
    />
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"/>
    <TextView
            android:text="@string/palce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/okraje"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:id="@+id/textViewPalce"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewPalce"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextPalce" android:minHeight="48dp" android:importantForAutofill="no"/>
    <TextView
            android:text="@string/penisy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/okraje"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textViewPenisy"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewPenisy"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextPenisy"
            android:importantForAutofill="no" android:minHeight="48dp"/>
    <TextView
            android:text="@string/schody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/editTextPalce"
            android:id="@+id/textViewSchody"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewSchody"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextSchody" android:minHeight="48dp" android:importantForAutofill="no"/>
    <TextView
            android:text="@string/sloni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPenisy"
            android:id="@+id/textViewSloni"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSloni"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextSloni"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>
    <TextView
            android:text="@string/fabie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/editTextSchody"
            android:id="@+id/textViewFabie"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewFabie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextFabie" android:minHeight="48dp" android:importantForAutofill="no"/>
    <TextView
            android:text="@string/dan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextSloni"
            android:id="@+id/textViewDan"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDan"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextDan" android:minHeight="48dp" android:importantForAutofill="no"/>
    <TextView
            android:text="@string/stadiony"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/editTextFabie"
            android:id="@+id/textViewStadiony"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewStadiony"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextStadiony" android:minHeight="48dp" android:importantForAutofill="no"/>
    <TextView
            android:text="@string/glompy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextDan"
            android:id="@+id/textViewGlompy"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewGlompy"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextGlompy" android:minHeight="48dp" android:importantForAutofill="no"/>
    <TextView
            android:text="@string/kolem_sveta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/editTextStadiony"
            android:id="@+id/textViewZemekoule"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewZemekoule"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextZemekoule" android:minHeight="48dp" android:importantForAutofill="no"/>
    <TextView
            android:text="@string/geldolfy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextGlompy"
            android:id="@+id/textViewGeldolfy"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewGeldolfy"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextGeldolfy" android:minHeight="48dp" android:importantForAutofill="no"/>


</androidx.constraintlayout.widget.ConstraintLayout>