<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/okraje"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:text="@string/cas"
            android:textSize="@dimen/velikost_textu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/editTextCas"
            app:layout_constraintBottom_toBottomOf="@id/editTextCas"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textViewZadejCas"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/okraje"
            app:layout_constraintStart_toEndOf="@id/textViewZadejCas"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spinnerJendotkyCas"
            android:inputType="number|numberDecimal"
            android:ems="20"
            android:id="@+id/editTextCas"
            android:minHeight="48sp"
            android:importantForAutofill="no"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/editTextCas"
            app:layout_constraintBottom_toBottomOf="@id/editTextCas"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/spinnerJendotkyCas"
            android:minHeight="48sp"/>
    <TextView
            android:text="@string/koeficient_zpozdeni"
            android:textSize="@dimen/velikost_textu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/editTextZpozdeni"
            app:layout_constraintBottom_toBottomOf="@id/editTextZpozdeni"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textViewZadejZpozdeni"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/okraje"
            app:layout_constraintStart_toEndOf="@id/textViewZadejZpozdeni"
            app:layout_constraintTop_toBottomOf="@id/editTextCas"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="number|numberDecimal"
            android:ems="20"
            android:id="@+id/editTextZpozdeni"
            android:minHeight="48sp"
            android:importantForAutofill="no"/>
    <View
            android:id="@+id/divider"
            app:layout_constraintTop_toBottomOf="@id/editTextZpozdeni"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?attr/colorPrimaryVariant"
    />
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"/>
    <TextView
            android:text="@string/dneska"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/okraje"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:id="@+id/textViewDnesk"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewDnesk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextDnesk"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>
    <TextView
            android:text="@string/pozdejc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/okraje"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textViewPozdejc"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewPozdejc"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextPozdejc"
            android:importantForAutofill="no"
            android:minHeight="48dp"/>
    <TextView
            android:text="@string/pivko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/editTextDnesk"
            android:id="@+id/textViewPivko"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewPivko"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextPivko"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>
    <TextView
            android:text="@string/uzjdu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPozdejc"
            android:id="@+id/textViewUzjdu"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewUzjdu"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextUzjdu"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>
    <TextView
            android:text="@string/mnult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/editTextPivko"
            android:id="@+id/textViewMnult"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewMnult"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextMnult"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>
</androidx.constraintlayout.widget.ConstraintLayout>