<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/okraje"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
            android:text="@string/zadej_plochu"
            android:textSize="@dimen/velikost_textu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/editTextPlocha"
            app:layout_constraintBottom_toBottomOf="@id/editTextPlocha"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textViewZadejPlochu"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/okraje"
            app:layout_constraintStart_toEndOf="@id/textViewZadejPlochu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spinnerJendotkyPlocha"
            android:inputType="number|numberDecimal"
            android:ems="20"
            android:id="@+id/editTextPlocha"
            android:minHeight="48sp"
            android:importantForAutofill="no"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/editTextPlocha"
            app:layout_constraintBottom_toBottomOf="@id/editTextPlocha"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/spinnerJendotkyPlocha"
            android:minHeight="48sp"/>
    <View
            android:id="@+id/divider"
            app:layout_constraintTop_toBottomOf="@id/editTextPlocha"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?attr/colorPrimaryVariant"
    />
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"/>
    <TextView
            android:text="@string/stadiony"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/okraje"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:id="@+id/textViewStadiony"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewStadiony"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextStadiony"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>
    <TextView
            android:text="@string/vaclavaky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/okraje"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textViewVaclavaky"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewVaclavaky"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextVaclavaky"
            android:importantForAutofill="no"
            android:minHeight="48dp"/>
    <TextView
            android:text="@string/bzilion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextVaclavaky"
            android:id="@+id/textViewBzilion"
            android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>