<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/okraje"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:text="@string/zadej_objem"
            android:textSize="@dimen/velikost_textu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/editTextObjem"
            app:layout_constraintBottom_toBottomOf="@id/editTextObjem"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textViewObjem"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/okraje"
            app:layout_constraintStart_toEndOf="@id/textViewObjem"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spinnerJendotkyObjem"
            android:inputType="number|numberDecimal"
            android:ems="20"
            android:id="@+id/editTextObjem"
            android:minHeight="48sp"
            android:importantForAutofill="no"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/editTextObjem"
            app:layout_constraintBottom_toBottomOf="@id/editTextObjem"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/spinnerJendotkyObjem"
            android:minHeight="48sp"/>
    <View
            android:id="@+id/divider"
            app:layout_constraintTop_toBottomOf="@id/editTextObjem"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black"
    />
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"/>
    <TextView
            android:text="@string/uruguaysky_pytel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/okraje"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:id="@+id/textViewUruguayskyPytel"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewUruguayskyPytel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextUruguayskyPytel"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>
    <TextView
            android:text="@string/brazilsky_pytel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/okraje"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textViewBrazilskyPytel"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewBrazilskyPytel"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextBrazilskyPytel"
            android:importantForAutofill="no"
            android:minHeight="48dp"/>
    <TextView
            android:text="@string/nadrz_fabie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/editTextUruguayskyPytel"
            android:id="@+id/textViewFabieNadrz"/>
    <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewFabieNadrz"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/editTextFabieNadrz"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>
</androidx.constraintlayout.widget.ConstraintLayout>